[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Actors/Player/Rose/Attacks/Attack.gd" type="Script" id=1]

[node name="Attack" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
wind = 0.2
attack = 0.1
recoil = 0.2
speed = 200

[node name="AttackTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="WindupTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="WindupTimer" to="." method="_on_WindupTimer_timeout"]


